# lab

./: .gitignore  README.md
corpus/config/: settings.json
corpus/docs/: ARCHITECTURE.md  AUTH.md
corpus/python/: auth.py  db.py  utils.py
corpus/typescript/: api.ts  config.ts  session.ts
experiments/001-offline-downloads-prompt/: index.html  package-lock.json  package.json
experiments/001-offline-downloads-prompt/src/: App.jsx
experiments/002-search-playground/: index.html  package-lock.json  package.json
experiments/002-search-playground/src/: App.tsx
experiments/002-search-playground/src/data/: songs.ts
experiments/003-coderag/coderag/: ast_chunk.py  chunk.py  cli.py  embed.py  hybrid_query.py  ingest.py  llm_gemini.py  prompting.py  query.py  store.py  symbols_query.py  util.py  vector_query.py
experiments/004-stt/stt/: requirements.txt  run.py
experiments/005-redis-order-book/: README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_consumer.py  run_dashboard.py  run_producers.py  server.js  test.py
experiments/005-redis-order-book/public/: index.html
experiments/005-redis-order-book/src/: config.py  models.py
experiments/005-redis-order-book/src/consumer/: book.py  engine.py
experiments/005-redis-order-book/src/dashboard/: view.py
experiments/005-redis-order-book/src/producers/: base.py  market_maker.py  noise_trader.py  trend_follower.py
experiments/006-url-shortener/: cli.py  docker-compose.yml  pyproject.toml  smoke_test.py
experiments/006-url-shortener/src/: config.py  db.py  models.py  shortener.py
(+15 files in other folders)
