[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-order-book"
version = "0.1.0"
description = "Real-time order book simulator using Redis Streams, Sorted Sets, and Pub/Sub"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src"]