[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener built on DynamoDB — learning project"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "nanoid>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]